latex compilation is now in alpha stage - generating lineCharts is possible - position calculation works TODO: - options for lineCharts - texts